fixed horizontal scroll in mobile version

--- a/assets/scss/_images.scss
+++ b/assets/scss/_images.scss
@@ -4,7 +4,7 @@ a {
   &.image {
     border: 0;
     display: block;
-    margin: 1em -1em;
+    margin: 1em 0;
     overflow: hidden;
     &:hover {
       img {
