--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -356,7 +356,8 @@ textarea {
    -ms-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    -o-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-   margin: 1em auto;
+   // margin: 1em auto;
+   margin: 1em 0;
    @include vendor-prefix-transition(all, 0.5s, ease)
    width: 75%;
    @include for-laptop-up {
@@ -462,7 +463,7 @@ textarea {
    > tbody > tr > td,
    > tfoot > tr > td {
      border: 0;
-     padding: 0.5em;
+     // padding: 0.5em;
    }
  }
 
@@ -894,142 +895,10 @@ textarea {
  }
 
  /* ---------------------------------Classes--------------------------------- */
+/* Posts */
 
- .post {
-   background: #ffffff;
-   margin: 1.5em auto;
-   padding: 1em;
-   max-width: 55em;
-   > header {
-     border-bottom: solid 1px rgba($border-color, 0.3);
-     margin: 1em 1em 0 1em;
-     text-align: center;
-     @include for-laptop-up {
-       display: flex;
-       justify-content: space-between;
-       text-align: left;
-     }
-     div {
-       padding: 0 0 1em 0;
-       @include for-laptop-up {
-         padding: 2em 1em;
-       }
-     }
-     p {
-       margin: -1em 0 0 0;
-     }
-     .title {
-       font-size: 1.1em;
-     }
-     .meta {
-       display: flex;
-       flex-direction: column;
-       @include for-laptop-up {
-         border-left: solid 1px rgba($border-color, 0.3);
-         text-align: right;
-         width: 17em;
-       }
-       .published {
-         font-family: $general_font;
-         font-size: 0.7em;
-         font-weight: 800;
-         letter-spacing: 0.25em;
-         text-transform: uppercase;
-       }
-       p, .author, .format {
-         font-family: $general_font;
-         font-size: 0.6em;
-         letter-spacing: 0.25em;
-         text-transform: uppercase;
-       }
-     }
-   }
-   > div, > p {
-     @include for-desktop-up {
-      margin: 16px 1em;
-    }
-     @include for-big-desktop-up {
-       margin: 16px 4em;
-     }
-   }
-   > div > p, > p {
-     text-align: justify;
-   }
+@import "post";
 
-   > footer {
-     display: flex;
-     flex-direction: column;
-     .stats {
-       display: flex;
-       cursor: default;
-       justify-content: space-around;
-       list-style: none;
-       margin: .5em 0;
-       padding: 0;
-       li {
-         display: flex;
-         align-items: center;
-         font-family: "Font Awesome 5 Free";
-         font-weight: 900;
-         max-width: 50%;
-         &:hover, &:active {
-           ul {
-             li {
-               visibility: visible;
-               opacity: 1;
-               line-height: 1;
-               margin: 1em;
-               width: auto;
-             }
-           }
-         }
-         &.categories {
-           &:before {
-             content: "\f07b";
-             width: 20px;
-           }
-         }
-         &.tags {
-           &:before {
-             content: "\f02c";
-             width: 20px;
-           }
-         }
-         ul {
-           display: flex;
-           flex-wrap: wrap;
-           border-left: solid 1px rgba($border-color, 0.3);
-           margin: 0 0 0 1em;
-           padding: 0 0 0 1em;
-           li {
-             visibility: visible;
-             font-family: $general_font;
-             font-size: 0.6em;
-             font-weight: 400;
-             letter-spacing: 0.25em;
-             line-height: 0;
-             margin: 0;
-             width: 0;
-             opacity: 0;
-             -webkit-transition: visibility 0s, opacity 0.5s linear, line-height 0.5s linear, margin 0.5s linear, width 0.5s linear;
-             -moz-transition: visibility 0s, opacity 0.5s linear, line-height 0.5s linear, margin 0.5s linear, width 0.5s linear;
-             -ms-transition: visibility 0s, opacity 0.5s linear, line-height 0.5s linear, margin 0.5s linear, width 0.5s linear;
-             -o-transition: visibility 0s, opacity 0.5s linear, line-height 0.5s linear, margin 0.5s linear, width 0.5s linear;
-             transition: visibility 0s, opacity 0.5s linear, line-height 0.5s linear, margin 0.5s linear, width 0.5s linear;
-             text-transform: uppercase;
-             &:nth-child(-n+3) {
-               visibility: visible;
-               opacity: 1;
-               width: auto;
-               line-height: 1;
-               margin: 1em;
-             }
-           }
-         }
-       }
-     }
-   }
- }
 
 /* Images */
 @import "images";
@@ -1342,7 +1211,7 @@ textarea {
  /* Site Main */
 
  #site-main {
-
+     
  }
 
  /* Sidebar */
@@ -1353,7 +1222,7 @@ textarea {
    }
    > * {
      border-top: solid 1px rgba($border-color, 0.3);
-     margin: 1em 2em 1em 1em;
+     margin: 1em 1em 1em 1em;
      padding-top: 1em;
    }
    > *:first-child {
